Fix an alignment issue in preview cards
For some reason, the `picture` element is taller than the
`img` element is supposed to be, making the layout look
a little out of whack. Giving it a set `height` fixes it.

--- a/src/components/molecules/previewCard/_index.scss
+++ b/src/components/molecules/previewCard/_index.scss
@@ -6,6 +6,11 @@
   content-visibility: auto;
   contain-intrinsic-size: 192px;
 
+  // TODO: Evaluate this hotfix and figure out a better solution
+  picture {
+    height: 144px;
+  }
+
   @media screen and (min-width: $layout-medium-breakpoint) {
     contain-intrinsic-size: 224px;
     gap: 1.5rem;
